# rust-machine-learning-api-example

./: .gitignore  Cargo.toml  Dockerfile  README.md  create_model.py  create_saved_model.py  sample_request.py
pkgconfig/: tensorflow.pc
src/: main.rs
